refactor: ItemRequestServiceImpl